--- a/gym-reservation-service/src/main/resources/application.properties
+++ b/gym-reservation-service/src/main/resources/application.properties
@@ -13,4 +13,11 @@ spring.h2.console.path=/h2-console
 # Security
 oauth.jwt.secret=secret_key
 spring.application.name=gym-reservation-service
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
+# ActiveMQ
+amq.url=tcp://localhost:61616
+amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
+spring.activemq.broker-url=${amq.url}${amq.queryParameters}
+destination.incrementReservationCount=increment_reservation_count
 
