--- a/gym-api-gateway/src/main/resources/application.properties
+++ b/gym-api-gateway/src/main/resources/application.properties
@@ -6,18 +6,11 @@ eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 zuul.sensitiveHeaders= Cookie,Set-Cookie
 zuul.ignored-headers= Access-Control-Allow-Credentials, Access-Control-Allow-Origin
-
-hystrix:
-    command:
-        default:
-            execution:
-                iso lation:
-                    thread:
-                        timeoutInMilliseconds: 60000
-
-
-ribbon:
-    ReadTimeout: 60000
-    connection-timeout: 60000
-    eureka:
-        enabled: true
+ribbon.eureka.enabled=true
+ribbon.restclient.enabled=true
+zuul.host.connect-timeout-millis=60000 
+zuul.host.socket-timeout-millis=80000
+#hystrix.command.default.execution.isolation.strategy=THREAD
+##hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 212000
+#ribbon.readtimeout=60000
+#ribbon.ConnectTimeout=60000
