--- a/gym-api-gateway/src/main/resources/application.properties
+++ b/gym-api-gateway/src/main/resources/application.properties
@@ -8,8 +8,8 @@ zuul.sensitiveHeaders= Cookie,Set-Cookie
 zuul.ignored-headers= Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 ribbon.eureka.enabled=true
 ribbon.restclient.enabled=true
-zuul.host.connect-timeout-millis=60000 
-zuul.host.socket-timeout-millis=80000
+#zuul.host.connect-timeout-millis=60000
+#zuul.host.socket-timeout-millis=80000
 #hystrix.command.default.execution.isolation.strategy=THREAD
 ##hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 212000
 #ribbon.readtimeout=60000
