--- a/gym-reservation-service/src/main/resources/application.properties
+++ b/gym-reservation-service/src/main/resources/application.properties
@@ -20,5 +20,7 @@ amq.url=tcp://localhost:61616
 amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeliveries=0
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
 destination.incrementReservationCount=increment_reservation_count
-#destination.sendEmails=send_emails_queue
+destination.sendReservationEmail=send_res_email_queue
+destination.sendCancellationEmail=send_cnl_email_queue
+destination.sendRemainderEmail=send_rem_email_queue
 
