--- a/gym-notification-service/src/main/resources/application.properties
+++ b/gym-notification-service/src/main/resources/application.properties
@@ -12,8 +12,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # Security
 oauth.jwt.secret=secret_key
+# Eureka
 spring.application.name=gym-notification-service
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.instance.preferIpAddress=true
 # ActiveMQ
 amq.url=tcp://localhost:61616
