--- a/gym-user-service/src/main/resources/application.properties
+++ b/gym-user-service/src/main/resources/application.properties
@@ -24,3 +24,8 @@ amq.queryParameters=?jms.prefetchPolicy.all=1&jms.redeliveryPolicy.maximumRedeli
 spring.activemq.broker-url=${amq.url}${amq.queryParameters}
 destination.incrementReservationCount=increment_reservation_count
 destination.sendConfirmationEmail=send_cnf_email_queue
+destination.sendReservationEmail=send_res_email_queue
+destination.sendCancellationEmail=send_cnl_email_queue
+destination.sendResCancellationEmail=send_res_cnl_email_queue
+destination.appointmentCancel=app_cancel
+destination.reservationCancel=res_cancel
