--- a/gym-notification-service/src/main/resources/application.properties
+++ b/gym-notification-service/src/main/resources/application.properties
@@ -26,6 +26,7 @@ destination.sendConfirmationEmail=send_cnf_email_queue
 destination.sendPasswordEmail=send_password_email_queue
 destination.sendReservationEmail=send_res_email_queue
 destination.sendCancellationEmail=send_cnl_email_queue
+destination.sendResCancellationEmail=send_res_cnl_email_queue
 destination.sendRemainderEmail=send_rem_email_queue
 # Email
 spring.mail.host=smtp.gmail.com
